mjorado los trerminos de busqueda

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -112,14 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "415b9c47",
    "metadata": {},
    "outputs": [],
    "source": [
     "# --- 2. Definir Parámetros de Búsqueda Base ---\n",
-    "rol_buscado = '\"Data Scientist\" OR \"Machine Learning Engineer\" OR \"Data Analyst\"'\n",
-    "sectores_clave = '(Fintech OR EdTech OR \"Future of Work\")'\n",
+    "roles_buscados = [\"Data Scientist\", \"Machine Learning Engineer\", \"Data Analyst\"]\n",
+    "sectores_clave = [\"Fintech\", \"EdTech\", \"Future of Work\"]\n",
+    "terminos_busqueda = list(product(roles_buscados, sectores_clave))\n",
     "search_term_base = f'({rol_buscado}) AND ({sectores_clave})'\n",
     "location = \"Remote\"\n",
     "country_code = \"USA\" # Código de país para Indeed"
